# rust-dc-interop

./: .gitignore  CMakeLists.txt  README.md
rust/game-code/: Cargo.toml
rust/game-code/src/: lib.rs
src/: main.c
toolchain/: Dreamcast.cmake
